--- a/templates/amphitheatre/index.html.twig
+++ b/templates/amphitheatre/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Gestion Amphitheatre</h1>
 
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Id</th>
