--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,25 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.2/quartz/bootstrap.min.css">
 
         {% endblock %}
+
+        <nav class="navbar navbar-expand-lg" data-bs-theme="light">
+            <div class="container-fluid">
+                <a class="navbar-brand">HSP</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <button type="button" class="btn btn-outline-primary">  <a class="nav-link" href="{{ path('app_default') }}">Accueil</a></button>
+                        </li>
+{#                        <li class="nav-item">#}
+{#                            <a class="nav-link" href="{{ path('app_user_show',  {'id': users.id}) }}"> Profil</a>#}
+{#                        </li>#}
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </head>
     <body>
         {% block body %}{% endblock %}
