--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <button type="button" class="btn btn-outline-primary">  <a class="nav-link" href="{{ path('app_default') }}">Accueil</a></button>
                         </li>
+                        <li class="nav-item">
+                            <button type="button" class="btn btn-outline-primary">  <a class="nav-link" href="{{ path('app_user_index',{'id': app.user.id})}})">Profile</a></button>
+                        </li>
 {#                        <li class="nav-item">#}
 {#                            <a class="nav-link" href="{{ path('app_user_show',  {'id': users.id}) }}"> Profil</a>#}
 {#                        </li>#}
