#7 in progress - menu principal pour offre d'emploi et navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,9 @@
 {#                            <a class="nav-link" href="{{ path('app_user_show',  {'id': users.id}) }}"> Profil</a>#}
 {#                        </li>#}
                     </ul>
+                    <form class="d-flex">
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Profil</button>
+                    </form>
                 </div>
             </div>
         </nav>
