Ajout affichage user

--- a/templates/amphitheatre/new.html.twig
+++ b/templates/amphitheatre/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Amphitheatre{% endblock %}
 
 {% block body %}
-    <h1>Créer nouvel Amphitheatre</h1>
+    <h1 class="text-primary-emphasis"> Créer un nouvel Amphitheatre</h1>
 
     {{ include('amphitheatre/_form.html.twig') }}
 
