--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,26 +14,42 @@
 
         {% endblock %}
 
-        <nav class="navbar navbar-expand-lg" data-bs-theme="light">
+        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand">HSP</a>
+                <a class="navbar-brand" href="#">HSP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <button type="button" class="btn btn-outline-primary">  <a class="nav-link" href="{{ path('app_default') }}">Accueil</a></button>
+                            <a class="nav-link active" href="{{ path('app_default') }}">Home
+                                <span class="visually-hidden">(current)</span>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <button type="button" class="btn btn-outline-primary">  <a class="nav-link" href="{{ path('app_user_index',{'id': app.user.id})}})">Profile</a></button>
+                            <a class="nav-link" href="{{ path('app_user_index') }}">Gestion Admin</a>
                         </li>
-{#                        <li class="nav-item">#}
-{#                            <a class="nav-link" href="{{ path('app_user_show',  {'id': users.id}) }}"> Profil</a>#}
-{#                        </li>#}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Separated link</a>
+                            </div>
+                        </li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Profil</button>
+                        <input class="form-control me-sm-2" type="search" placeholder="Search">
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>
             </div>
