#7 update - menu offre d'empoi etudiant et correction navbar lors de la connexion

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -68,7 +68,7 @@
     <tr align="center"><th><a href="{{ path('app_creation_index') }}"><button class="btn btn-outline-light" role="button">Gestion Création</button></a></th> </tr>
     <tr align="center"><th><a href="{{ path('app_validation_index') }}"><button class="btn btn-outline-primary" role="button">Valider comptes</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_validation_index') }}"><button class="btn btn-outline-primary" role="button">Postuler Etudiant</button></a></th></tr>
-    <tr align="center"><th><a href="{{ path('app_offre_emploi_etudiant', {'id': app.user.id})  }}"><button class="btn btn-outline-primary" role="button">Voir offres d'emplois</button></a></th></tr>
+    <tr align="center"><th><a href="{{ path('app_offre_emploi_etudiant', {'id': app.user.id}) }}"><button class="btn-outline-primary" role="button">Voir offres d'emplois</button></a></th></tr>
     </tr>
 </table>
 
