--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.2/cyborg/bootstrap.min.css">
 
         {% endblock %}
-
+{% if app.user %}
         <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">HSP</a>
@@ -54,6 +54,7 @@
                 </div>
             </div>
         </nav>
+        {% endif %}
     </head>
     <body>
         {% block body %}{% endblock %}
