Ajout du style du formulaire

--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -24,7 +24,7 @@
                 <td>{{ conference.id }}</td>
                 <td>{{ conference.nom }}</td>
                 <td>{{ conference.description }}</td>
-                <td>{{ conference.date ? conference.date|date('Y-m-d') : '' }}</td>
+                <td>{{ conference.date ? conference.date|date('d-m-Y') : '' }}</td>
                 <td>{{ conference.heure }}</td>
                 <td>{{ conference.duree }}</td>
                 <td>
