--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,5 +1,58 @@
+<script src="https://unpkg.com/feather-icons"></script>
+<script>
+    feather.replace();
+</script>
 {{ form_start(form) }}
-    {{ form_widget(form) }}
+
+<div class="form-group">
+    <label for="exampleInputEmail1" class="form-label mt-4">Email</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder={{ form_widget(form.email) }}>
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+</div>
+<div class="form-group">
+    <label for="exampleInputPassword1" class="form-label mt-4">Nom</label>
+    <input type="Nom" class="form-control" id="Nom" placeholder={{ form_widget(form.nom) }}>
+    <small id="nom" class="form-text text-muted">Entrez votre nom.</small>
+</div>
+
+<div class="form-group">
+    <label for="exampleInputPassword1" class="form-label mt-4">Prenom</label>
+    <input type="prenom" class="form-control" id="prenom" placeholder={{ form_widget(form.prenom) }} >
+    <small id="nom" class="form-text text-muted">Entrez votre prenom</small>
+</div>
+<div class="form-group">
+    <label for="exampleInputPassword1" class="form-label mt-4">Adresse</label>
+    <input type="adresse" class="form-control" id="adresse" placeholder={{ form_widget(form.adresse) }} >
+    <small id="nom" class="form-text text-muted">Entrez votre adresse</small>
+</div>
+
+        {% if form.password is defined %}
+            <div class="form-group">
+                <label for="exampleInputPassword1" class="form-label mt-4">Mot de passe</label>
+                <input type="mdp" class="form-control" id="mdp" placeholder={{ form_widget(form.password) }} >
+                <small id="nom" class="form-text text-muted">Entrez votre nouveau mot de passe.</small>
+            </div>
+            <label>
+                <input type="password" placeholder={{ form_widget(form.password) }}>
+
+                <div class="password-icon">
+                    <i data-feather="eye"></i>
+                    <i data-feather="eye-off"></i>
+                </div>
+            </label>
+        {% endif %}
+<div class="form-group">
+    <label for="exampleInputPassword1" class="form-label mt-4">Domaine etude</label>
+    <input type="adresse" class="form-control" id="adresse" placeholder={{ form_widget(form.domaine_etude) }} >
+    <small id="nom" class="form-text text-muted">Entrez votre domaine d'étude</small>
+</div>
+<div class="form-group">
+    <label for="exampleInputPassword1" class="form-label mt-4">Adresse</label>
+    <input type="adresse" class="form-control" id="adresse" placeholder={{ form_widget(form.adresse) }} >
+    <small id="nom" class="form-text text-muted">Entrez votre adresse</small>
+</div>
+
+
     <button class="btn">{{ button_label|default('Save') }}</button>
 
 {{ form_end(form) }}
