--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -38,6 +38,7 @@
                 <th>Domaine_etude</th>
                 <td>{{ user.domaineEtude }}</td>
             </tr>
+
             <tr>
                 <th>Est_valide</th>
                 <td>{{ user.estValide ? 'Yes' : 'No' }}</td>
@@ -46,14 +47,16 @@
                 <th>IsVerified</th>
                 <td>{{ user.isVerified ? 'Yes' : 'No' }}</td>
             </tr>
+
+
         </tbody>
     </table>
 
     <td> <th> <a href="{{ path('app_user_index') }}">
-        <button type="button" class="btn btn-outline-light">RETOUR</button></a></td></th>
+        <button type="button" class="btn btn-outline-light">RETOUR</button></a></th></td>
 
     <td> <th> <a href="{{ path('app_user_edit', {'id': app.user.id}) }}">
-        <button type="button" class="btn btn-outline-light">MODIFIER</button></a></td></th>
+        <button type="button" class="btn btn-outline-light">MODIFIER</button></a></th></td>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
