Validation de conference et de user

--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -38,6 +38,7 @@
             </tr>
         {% endfor %}
 
+        <tr align="center"><th><a href="{{ path('admin_conference_validation_page') }}"><button class="btn btn-outline-secondary" role="button">Valider Conférence</button></a></th> </tr>
         </tbody>
     </table>
 
