--- a/templates/validation/index.html.twig
+++ b/templates/validation/index.html.twig
@@ -1,9 +1,10 @@
+
 {% extends 'base.html.twig' %}
 
-{% block title %}Validation index{% endblock %}
+{% block title %}Validation des comptes {% endblock %}
 
 {% block body %}
-    <h1>Validation index</h1>
+    <h1>Validation des comptes</h1>
 
     <table class="table">
         <thead>
