--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,9 +28,11 @@
                             </a>
                         </li>
 
+                        {% if app.user.roles == "ROLE_ADMIN"%}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_user_index') }}">Gestion Admin</a>
+                            <a class="nav-link" href="{{ path('app_user_index') }}">Gestion User</a>
                         </li>
+                        {%endif %}
                     </ul>
                     <a class="nav-link" href="{{ path('app_logout') }}"> Déconnexion  </a>
                     <form class="d-flex">
