--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -44,14 +44,16 @@
                 </div>
             </label>
         {% endif %}
+{% if app.user.role("ROLE_ETUDIANT") %}
 <div class="form-group">
     <label for="exampleInputPassword1" class="form-label mt-4">Domaine etude</label>
     <input type="adresse" class="form-control" id="adresse" placeholder={{ form_widget(form.domaine_etude) }} >
     <small id="nom" class="form-text text-muted">Entrez votre domaine d'étude</small>
 </div>
-{% if not app.user.role("ROLE_ADMIN") %}
-{{ form_widget(form) }}
 {% endif %}
+
+{{ form_widget(form) }}
+
     <button class="btn">{{ button_label|default('Save') }}</button>
 
 {{ form_end(form) }}
