--- a/templates/offre_emploi/etudiant_index.html.twig
+++ b/templates/offre_emploi/etudiant_index.html.twig
@@ -16,14 +16,22 @@
         </tr>
         </thead>
         <tbody>
-        {% for offre_emploi in OffreEmploiEtudiant %}
+        {% for offre_emploi in offre_emploi_etudiant %}
             <tr>
                 <td>{{ offre_emploi.id }}</td>
                 <td>{{ offre_emploi.titre }}</td>
                 <td>{{ offre_emploi.description }}</td>
                 <td>{{ offre_emploi.typeContrat }}</td>
                 <td>
-                    <a href="{{ path('app_offre_emploi_show', {'id': offre_emploi.id}) }}">show</a>
+
+                    <form method="post" action="{{ path('app_default', {'id': offre_emploi.id,
+                        'offre_emploi_data': {'id': offre_emploi.id,
+                            'titre': offre_emploi.titre,
+                            'description': offre_emploi.description,
+                            'typeContrat': offre_emploi.typeContrat}})
+                    }}">
+                        <button type="submit">Envoyer</button>
+                    </form>
 
                 </td>
             </tr>
@@ -35,5 +43,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_offre_emploi_new') }}">Create new</a>
+
 {% endblock %}
