--- a/templates/offre_emploi/etudiant_index.html.twig
+++ b/templates/offre_emploi/etudiant_index.html.twig
@@ -22,15 +22,11 @@
                 <td>{{ offre_emploi.titre }}</td>
                 <td>{{ offre_emploi.description }}</td>
                 <td>{{ offre_emploi.typeContrat }}</td>
-                <td>
+                <td>{{ offre_emploi.refUser }}</td>
 
-                    <form method="post" action="{{ path('app_default', {'id': offre_emploi.id,
-                        'offre_emploi_data': {'id': offre_emploi.id,
-                            'titre': offre_emploi.titre,
-                            'description': offre_emploi.description,
-                            'typeContrat': offre_emploi.typeContrat}})
+                <td>    <form method="POST" action="{{ path('app_postuler_etudiant', {'id': offre_emploi.id})
                     }}">
-                        <button type="submit">Envoyer</button>
+                        <button type="submit">Postuler</button>
                     </form>
 
                 </td>
