--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,12 +13,11 @@
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.nom) }}
-        {{ form_row(registrationForm.prenom) }}
+        <input type="file" value="{{ field _name(registrationForm.prenom) }}">
         {{ form_row(registrationForm.email) }}
-
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
-        }) }}
+        })}}
         {{ form_row(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn btn-secondary mt-3">Register</button>
