--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,7 +2,19 @@
 
 {% block title %}Log in!{% endblock %}
 
+
 {% block body %}
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="path/to/your/bootstrap/css">
+    <style>
+        .center-text {
+            text-align: center;
+        }
+    </style>
+    </head>
+
 <form method="post">
 
 
@@ -16,20 +28,21 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <div class="center-text">
+        <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
+    </div>
     <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+    <input  type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control " autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <input type="password" name="password" id="inputPassword" class="form-control " autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
 
-    <button class="btn btn-lg btn-primary mt-3" type="submit">
-        Sign in
-    </button>
-    <a href="{{ path('app_forgot_password_request') }}" class="btn btn-secondary mt-3">Mot de passe oublié</a>
-    <a href="{{ path('app_register') }}" class="btn btn-secondary mt-3">S'inscrire</a>
+
+    <button type="button" class="btn btn-outline-primary">Se connecter</button>
+    <a href="{{ path('app_forgot_password_request') }}"type="button" class="btn btn-outline-primary">Mot de passe oublié</a>
+    <a href="{{ path('app_register') }}"type="button" class="btn btn-outline-primary">S'inscrire</a>
 </form>
 {% endblock %}
