--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,7 +41,9 @@
     >
 
 
-    <button type="button" class="btn btn-outline-primary">Se connecter</button>
+    <button class="btn btn-lg btn-primary mt-3" type="submit">
+        Sign in
+    </button>
     <a href="{{ path('app_forgot_password_request') }}"type="button" class="btn btn-outline-primary">Mot de passe oublié</a>
     <a href="{{ path('app_register') }}"type="button" class="btn btn-outline-primary">S'inscrire</a>
 </form>
