--- a/templates/rendez_vous/confirmation.html.twig
+++ b/templates/rendez_vous/confirmation.html.twig
@@ -18,11 +18,11 @@
         {% for rendez_vous in rendez_vous %}
             <tr>
                 <td>{{ rendez_vous.id }}</td>
-                <td>{{ rendez_vous.date ? rendez_vou.date|date('Y-m-d') : '' }}</td>
+                <td>{{ rendez_vous.date ? rendez_vous.date|date('Y-m-d') : '' }}</td>
                 <td>{{ rendez_vous.heure }}</td>
                 <td>
-                    <a href="{{ path('app_rendez_vous_show', {'id': rendez_vou.id}) }}">show</a>
-                    <a href="{{ path('app_rendez_vous_edit', {'id': rendez_vou.id}) }}">edit</a>
+                    <a href="{{ path('app_rendez_vous_show', {'id': rendez_vous.id}) }}">show</a>
+                    <a href="{{ path('app_rendez_vous_edit', {'id': rendez_vous.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
