--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,25 +1,54 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
+    <h1>Inscription</h1>
 
     {{ form_errors(registrationForm) }}
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.nom) }}
-        <input type="file" value="{{ field _name(registrationForm.prenom) }}">
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        })}}
-        {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn btn-secondary mt-3">Register</button>
+    <div class="form-group">
+        {{ form_label(registrationForm.prenom, null, {'label_attr': {'class': 'form-label mt-4'}}) }}
+        {{ form_widget(registrationForm.prenom, {'attr': {'class': 'form-control', 'placeholder': 'Entrez votre prénom'}}) }}
+    </div>
+    <div class="form-group">
+        {{ form_label(registrationForm.nom, null, {'label_attr': {'class': 'form-label mt-4'}}) }}
+        {{ form_widget(registrationForm.nom, {'attr': {'class': 'form-control', 'placeholder': 'Entrez votre nom'}}) }}
+    </div>
+    {#
+    <div class="form-group">
+        {{ form_label(registrationForm.rue, null, {'label_attr': {'class': 'form-label mt-4'}}) }}
+        {{ form_widget(registrationForm.rue, {'attr': {'class': 'form-control', 'placeholder': 'Entrez votre nom de rue'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(registrationForm.code_postal, null, {'label_attr': {'class': 'form-label mt-4'}}) }}
+        {{ form_widget(registrationForm.code_postal, {'attr': {'class': 'form-control', 'placeholder': 'Entrez votre CP'}}) }}
+    </div>
+    <div class="form-group">
+        {{ form_label(registrationForm.ville, null, {'label_attr': {'class': 'form-label mt-4'}}) }}
+        {{ form_widget(registrationForm.ville, {'attr': {'class': 'form-control', 'placeholder': 'Entrez votre ville'}}) }}
+    </div>
+    #}
+
+    <div class="form-group">
+        {{ form_label(registrationForm.email, null, {'label_attr': {'class': 'form-label mt-4'}}) }}
+        {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control', 'placeholder': 'Entrez votre mail'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(registrationForm.plainPassword, 'Password', {'label_attr': {'class': 'form-label mt-4'}}) }}
+        {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'form-control'}}) }}
+    </div>
+
+    {{ form_row(registrationForm.agreeTerms) }}
+
+    <button type="submit" class="btn btn-secondary mt-3">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
