--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -15,7 +15,9 @@
                 <th>Password</th>
                 <th>Nom</th>
                 <th>Prenom</th>
-                <th>Adresse</th>
+                <th>Rue</th>
+                <th>Code_postal</th>
+                <th>Ville</th>
                 <th>Domaine_etude</th>
                 <th>Est_valide</th>
                 <th>IsVerified</th>
@@ -39,7 +41,9 @@
                 <td>{{ user.password }}</td>
                 <td>{{ user.nom }}</td>
                 <td>{{ user.prenom }}</td>
-                <td>{{ user.adresse }}</td>
+                <td>{{ user.rue }}</td>
+                <td>{{ user.code_postal }}</td>
+                <td>{{ user.ville }}</td>
                 <td>{{ user.domaineEtude }}</td>
                 <td>{{ user.estValide ? 'Yes' : 'No' }}</td>
                 <td>{{ user.isVerified ? 'Yes' : 'No' }}</td>
