--- a/templates/rendez_vous/index.html.twig
+++ b/templates/rendez_vous/index.html.twig
@@ -21,7 +21,7 @@
                 <td>{{ rendez_vou.date ? rendez_vou.date|date('Y-m-d') : '' }}</td>
                 <td>{{ rendez_vou.heure }}</td>
                 <td>
-                    <a href="{{ path('app_rendez_vous_show', {'id': rendez_vou.id}) }}">show</a>
+                   {# <a href="{{ path('app_rendez_vous_show', {'id': rendez_vou.id}) }}">show</a>#}
                     <a href="{{ path('app_rendez_vous_edit', {'id': rendez_vou.id}) }}">edit</a>
                 </td>
             </tr>
