--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -41,8 +41,13 @@
                 <td>{{ user.prenom }}</td>
             </tr>
             <tr>
-                <th>Adresse</th>
-                <td>{{ user.adresse }}</td>
+                <th>Rue</th>
+                <td>{{ user.rue }}</td>
+            </tr>
+
+            <tr>
+                <th>Ville</th>
+                <td>{{ user.ville}}</td>
             </tr>
 
             <tr>
