#7 add - ajout de rendez vous? in progress - page de consultation et validation d'un rendez-vous

--- a/templates/rendez_vous/validation.html.twig
+++ b/templates/rendez_vous/validation.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Valider RendezVous{% endblock %}
 
 {% block body %}
-    <h1>Edit RendezVous</h1>
+    <h1>Etablir Rendez Vous</h1>
 
     {{ include('rendez_vous/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_rendez_vous_index') }}">back to list</a>
+    <a href="{{ path('app_default')  }}">Annuler</a>
    
 
 {% endblock %}
