--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -70,6 +70,7 @@
     <tr align="center"><th><a href="{{ path('app_validation_index') }}"><button class="btn btn-outline-primary" role="button">Postuler Etudiant</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_offre_emploi_etudiant', {'id': app.user.id}) }}"><button class="btn-outline-primary" role="button">Voir offres d'emplois</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_rendez_vous_confirmation', {'id': app.user.id}) }}"><button class="btn-outline-primary" role="button">Organiser un rendez-vous</button></a></th></tr>
+    <tr align="center"><th><a href="{{ path('app_rendez_vous_accepter_index', {'id': app.user.id}) }}"><button class="btn-outline-primary" role="button">Valider ses rendez-vous</button></a></th></tr>
     </tr>
 </table>
 
