--- a/templates/rendez_vous/confirmation.html.twig
+++ b/templates/rendez_vous/confirmation.html.twig
@@ -25,6 +25,8 @@
                 <td>
 
                     <a href="{{ path('app_rendez_vous_ajout', {'id': postulation.rendezVous.id}) }}">Proposer un rdv</a>
+
+
                 </td>
             </tr>
         {% else %}
@@ -35,5 +37,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_rendez_vous_new') }}">Create new</a>
+
+    <a href="{{ path('app_default')  }}">Retour</a>
 {% endblock %}
