#7 update - correction redirection des offres d'emplois

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -68,9 +68,9 @@
     <tr align="center"><th><a href="{{ path('app_creation_index') }}"><button class="btn btn-outline-light" role="button">Gestion Création</button></a></th> </tr>
     <tr align="center"><th><a href="{{ path('app_validation_index') }}"><button class="btn btn-outline-primary" role="button">Valider comptes</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_validation_index') }}"><button class="btn btn-outline-primary" role="button">Postuler Etudiant</button></a></th></tr>
-    <tr align="center"><th><a href="{{ path('app_offre_emploi_etudiant', {'id': app.user.id}) }}"><button class="btn-outline-primary" role="button">Voir offres d'emplois</button></a></th></tr>
-    <tr align="center"><th><a href="{{ path('app_rendez_vous_confirmation', {'id': app.user.id}) }}"><button class="btn-outline-primary" role="button">Organiser un rendez-vous</button></a></th></tr>
-    <tr align="center"><th><a href="{{ path('app_rendez_vous_accepter_index', {'id': app.user.id}) }}"><button class="btn-outline-primary" role="button">Valider ses rendez-vous</button></a></th></tr>
+    <tr align="center"><th><a href="{{ path('app_offre_emploi_etudiant') }}"><button class="btn-outline-primary" role="button">Voir offres d'emplois</button></a></th></tr>
+    <tr align="center"><th><a href="{{ path('app_rendez_vous_confirmation') }}"><button class="btn-outline-primary" role="button">Organiser un rendez-vous</button></a></th></tr>
+    <tr align="center"><th><a href="{{ path('app_rendez_vous_accepter_index')}}"><button class="btn-outline-primary" role="button">Valider ses rendez-vous</button></a></th></tr>
     </tr>
 </table>
 
