--- a/templates/rendez_vous/accepter_index.html.twig
+++ b/templates/rendez_vous/accepter_index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}RendezVous index{% endblock %}
+{% block title %}liste RendezVous{% endblock %}
 
 {% block body %}
-<h1>RendezVous index</h1>
+<h1>liste RendezVous</h1>
 
 <table class="table">
   <thead>
@@ -22,7 +22,7 @@
     <td>{{ rendez_vou.heure }}</td>
     <td>
 
-      <a href="{{ path('app_rendez_vous_edit', {'id': rendez_vou.id}) }}">edit</a>
+      <a href="{{ path('app_rendez_vous_acceptation', {'id': rendez_vou.id}) }}">Accepter le rdv</a>
     </td>
   </tr>
   {% else %}
