Avancement sur l'accueil, ainsi que sur les accès

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -71,6 +71,7 @@
     <tr align="center"><th><a href="{{ path('app_offre_emploi_etudiant') }}"><button class="btn-outline-primary" role="button">Voir offres d'emplois</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_rendez_vous_confirmation') }}"><button class="btn-outline-primary" role="button">Organiser un rendez-vous</button></a></th></tr>
     <tr align="center"><th><a href="{{ path('app_rendez_vous_accepter_index')}}"><button class="btn-outline-primary" role="button">Valider ses rendez-vous</button></a></th></tr>
+    <tr align="center"><th><a href="{{ path('app_user_index')}}"><button class="btn-outline-primary" role="button">Gestion Utilisateur</button></a></th></tr>
     </tr>
 </table>
 
