--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -7,8 +7,9 @@
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-
+    {%if app.user.roles == "ROLE_ADMIN" %}
     <a href="{{ path('app_user_index') }}">back to list</a>
+    {% endif %}
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
